tests/ui/feature-gates/feature-gate-crablangc_const_unstable.stderr
error[E0734]: stability attributes may not be used outside of the standard library
  --> $DIR/feature-gate-crablangc_const_unstable.rs:3:1
   |
LL | #[crablangc_const_unstable(feature="fzzzzzt")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `crablangc --explain E0734`.
